---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: ????
  Changes:
    - Adjusted progression tiering for electric boilers, chemical plants and oil & gas separators in line with changes from Angel's Petrochem
    - Dropped support for ShinyBobGFX, ShinyAngelGFX
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-06-02
  Bugfixes:
    - Adjusted function `num_tier` to validate tint fetching, correcting crashes related to trying to fetch a tint from `angelsmods[mod]` where `mod` is not enabled.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-02
  Changes:
    - Adjusted how ore icon variations are generated in line with changes in Artisanal Reskins: Library
    - Adjusted the progression tier of the algae farms
    - Added explosions and particles to warehouses and big chests
  Bugfixes:
    - Fixed that pipes did not respect the setting "Use Angel's material colors for pipes"
    - Fixed that icon assignment for Ore crusher 4 with Extended Angels was being overwritten
    - Fixed that pipe to ground icons had black transparent pixels
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-03-22
  Features:
    - The following entity implementations are preliminary fast-passes that will be gradually be replaced in the future with upgraded models re-rendered in high resolution, and are intended merely to complete the color tiering
    - Implemented the crystallizer, electrowinning cell, filtration unit, hydro plant, liquifier, ore crusher, ore floatation cell, ore leaching plant, ore powderizer, ore refinery, ore sorting facility, salination plant and the washing plant from Angel's Refining